merges